package model;

public interface IWeight {
    float weight();
}
